<resources>
    <string name="app_name">Dicoding Stories</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Mau belajar Android, iOS, Machine Learning, Cloud, Front-End, Back-End, dan bidang IT lainnya? Di Dicoding aja!</string>
    <string name="title_welcome_page">Selamat datang di Dicoding!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="story_caption">Story caption</string>
    <string name="story_tittle">Story Tittle</string>
    <string name="story_date">9 November 2023</string>
    <string name="date_posted">Date posted:</string>
    <string name="camera">Camera</string>
    <string name="camera_x">Camera X</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="description">Image description</string>
    <string name="empty_image_warning">TIdak ada gambar yang dimasukkan</string>
    <string name="loading">loading</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps_button">maps button</string>
    <string name="coba_lagi">Coba lagi</string>
    <string name="gagal_memuat_data">Gagal memuat data</string>

</resources>