<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.storyDetail.StoryDetailActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:transitionName="storyImage"
        android:src="@mipmap/image_not_available_foreground"/>

    <TextView
        android:id="@+id/storyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/story_tittle"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="30sp"
        android:textStyle="bold"
        android:transitionName="storyTitle"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />
    <TextView
        android:id="@+id/datePosted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/storyTitle"
        android:textSize="15sp"
        android:text="@string/date_posted"/>

    <TextView
        android:id="@+id/storyDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@id/datePosted"
        app:layout_constraintTop_toBottomOf="@id/storyTitle"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/story_date"/>

    <TextView
        android:id="@+id/storyCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storyDate"
        android:textSize="20sp"
        android:transitionName="storyCaption"
        android:text="@string/story_caption"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/loading"
        tools:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>