<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".view.main.MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/storyList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/mapsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@id/uploadImage"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/baseline_map_24"
        android:contentDescription="@string/maps_button" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/uploadImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@id/logoutButton"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/baseline_add_a_photo_24"
        android:contentDescription="@string/upload" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/baseline_logout_24"
        android:contentDescription="@string/logout" />

</androidx.constraintlayout.widget.ConstraintLayout>